add_executable(fl21_P2_A A.cpp)
add_executable(fl21_P2_B B.cpp)
add_executable(fl21_P2_C C.cpp)
add_executable(fl21_P2_D D.cpp)
add_executable(fl21_P2_E E.cpp)
add_executable(fl21_P2_F F.cpp)
add_executable(fl21_P2_G G.cpp)
add_executable(fl21_P2_H H.cpp)
add_executable(fl21_P2_I I.cpp)
add_executable(fl21_P2_J J.cpp)
add_executable(fl21_P2_K K.cpp)
add_executable(fl21_P2_L L.cpp)
add_executable(fl21_P2_M M.cpp)
add_executable(fl21_P2_N N.cpp)
add_executable(fl21_P2_O O.cpp)
add_executable(fl21_P2_P P.cpp)
add_executable(fl21_P2_Q Q.cpp)
add_executable(fl21_P2_R R.cpp)
add_executable(fl21_P2_S S.cpp)
add_executable(fl21_P2_T T.cpp)